--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "node": "10.15.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-transition-group": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
